<resources>
    <string name="app_name">Kerala Election Live</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_copyright">© 2018 All Rights Reserved</string>
    <string name="app_copyright_site">www.amaljyothi.ac.in</string>
    <string name="app_copyright_owner">Amal Jyothi College of Engineering\n Kanjirappally</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_tab">Kerala Election Live</string>
    <string name="tab_text_1">DOMAINS</string>
    <string name="tab_text_2">HOME</string>
    <string name="tab_text_3">CANDIDATES</string>
    <string name="domain_tab_text_1">RESULT</string>
    <string name="domain_tab_text_2">ANALYSIS</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="title_activity_domain_wise">DomainWiseActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_candidate_info">CandidateInfoActivity</string>
    <string name="title_activity_leading_list">LeadingListActivity</string>
    <string name="title_activity_won_list">WonListActivity</string>
</resources>
