<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:textColor="#000000"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_copyright"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:textColor="#000000"
                android:textSize="13sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/app_copyright_owner"
                android:layout_gravity="center"
                android:paddingTop="2dp"
                android:textColor="#000000"
                android:textSize="13sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/app_copyright_site"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:textSize="13sp"
                />
        </LinearLayout>
    </RelativeLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        android:tint="@color/red"
        android:id="@+id/close"
        android:textStyle="bold"
        android:layout_height="35dp"/>

    <ImageView
        android:id="@+id/user_profile_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_kel_notext"/>

</RelativeLayout>